Etapa 4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    TkElse

Grammar

Rule 0     S' -> program
Rule 1     program -> new_block declarations TkSemicolon instructions TkCBlock
Rule 2     program -> new_block instructions TkCBlock
Rule 3     new_block -> TkOBlock
Rule 4     declarations -> declarations TkSemicolon declaration
Rule 5     declarations -> declaration
Rule 6     declaration -> TkInt idlist
Rule 7     declaration -> TkBool idlist
Rule 8     declaration -> TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
Rule 9     idlist -> idlist TkComma id
Rule 10    idlist -> id
Rule 11    id -> TkId
Rule 12    expressionlist -> expressionlist TkComma expression
Rule 13    expressionlist -> expression TkComma expression
Rule 14    instructions -> instructions TkSemicolon instruction
Rule 15    instructions -> instruction
Rule 16    instruction -> while
Rule 17    instruction -> if
Rule 18    instruction -> print
Rule 19    instruction -> skip
Rule 20    instruction -> program
Rule 21    instruction -> TkId TkAsig expression
Rule 22    instruction -> TkId TkAsig expressionlist
Rule 23    instruction -> TkId TkAsig functionMod
Rule 24    print -> TkPrint expression
Rule 25    print -> TkPrint string
Rule 26    skip -> TkSkip
Rule 27    while -> TkWhile expression TkArrow instructions TkEnd
Rule 28    if -> TkIf guardlist TkFi
Rule 29    guardlist -> guardlist TkGuard guard
Rule 30    guardlist -> guard
Rule 31    guard -> expression TkArrow instructions
Rule 32    expression -> expression TkPlus expression
Rule 33    expression -> expression TkMinus expression
Rule 34    expression -> expression TkMult expression
Rule 35    expression -> expression TkLeq expression
Rule 36    expression -> expression TkGeq expression
Rule 37    expression -> expression TkLess expression
Rule 38    expression -> expression TkGreater expression
Rule 39    expression -> expression TkEqual expression
Rule 40    expression -> expression TkNEqual expression
Rule 41    expression -> expression TkOr expression
Rule 42    expression -> expression TkAnd expression
Rule 43    expression -> TkNot expression
Rule 44    expression -> TkMinus expression
Rule 45    expression -> expression TkApp TkId
Rule 46    expression -> expression TkApp TkNum
Rule 47    expression -> TkId TkApp expression
Rule 48    expression -> functionMod TkApp expression
Rule 49    functionMod -> functionMod TkOpenPar twopoints TkClosePar
Rule 50    functionMod -> TkId TkOpenPar twopoints TkClosePar
Rule 51    twopoints -> expression TkTwoPoints expression
Rule 52    expression -> TkId
Rule 53    expression -> TkOpenPar expression TkClosePar
Rule 54    string -> TkString
Rule 55    string -> string TkPlus string
Rule 56    string -> expression TkPlus string
Rule 57    string -> string TkPlus expression
Rule 58    expression -> TkNum
Rule 59    expression -> TkTrue
Rule 60    expression -> TkFalse

Terminals, with rules where they appear

ERROR                : 
TkAnd                : 42
TkApp                : 45 46 47 48
TkArrow              : 27 31
TkAsig               : 21 22 23
TkBool               : 7
TkCBlock             : 1 2
TkCBracket           : 8
TkClosePar           : 49 50 53
TkComma              : 9 12 13
TkElse               : 
TkEnd                : 27
TkEqual              : 39
TkFalse              : 60
TkFi                 : 28
TkFunction           : 8
TkGeq                : 36
TkGreater            : 38
TkGuard              : 29
TkId                 : 11 21 22 23 45 47 50 52
TkIf                 : 28
TkInt                : 6
TkLeq                : 35
TkLess               : 37
TkMinus              : 33 44
TkMult               : 34
TkNEqual             : 40
TkNot                : 43
TkNum                : 8 46 58
TkOBlock             : 3
TkOBracket           : 8
TkOpenPar            : 49 50 53
TkOr                 : 41
TkPlus               : 32 55 56 57
TkPrint              : 24 25
TkSemicolon          : 1 4 14
TkSkip               : 26
TkSoForth            : 8
TkString             : 54
TkTrue               : 59
TkTwoPoints          : 51
TkWhile              : 27
error                : 

Nonterminals, with rules where they appear

declaration          : 4 5
declarations         : 1 4
expression           : 12 13 13 21 24 27 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47 48 51 51 53 56 57
expressionlist       : 12 22
functionMod          : 23 48 49
guard                : 29 30
guardlist            : 28 29
id                   : 9 10
idlist               : 6 7 8 9
if                   : 17
instruction          : 14 15
instructions         : 1 2 14 27 31
new_block            : 1 2
print                : 18
program              : 20 0
skip                 : 19
string               : 25 55 55 56 57
twopoints            : 49 50
while                : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . new_block declarations TkSemicolon instructions TkCBlock
    (2) program -> . new_block instructions TkCBlock
    (3) new_block -> . TkOBlock

    TkOBlock        shift and go to state 3

    program                        shift and go to state 1
    new_block                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> new_block . declarations TkSemicolon instructions TkCBlock
    (2) program -> new_block . instructions TkCBlock
    (4) declarations -> . declarations TkSemicolon declaration
    (5) declarations -> . declaration
    (14) instructions -> . instructions TkSemicolon instruction
    (15) instructions -> . instruction
    (6) declaration -> . TkInt idlist
    (7) declaration -> . TkBool idlist
    (8) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
    (16) instruction -> . while
    (17) instruction -> . if
    (18) instruction -> . print
    (19) instruction -> . skip
    (20) instruction -> . program
    (21) instruction -> . TkId TkAsig expression
    (22) instruction -> . TkId TkAsig expressionlist
    (23) instruction -> . TkId TkAsig functionMod
    (27) while -> . TkWhile expression TkArrow instructions TkEnd
    (28) if -> . TkIf guardlist TkFi
    (24) print -> . TkPrint expression
    (25) print -> . TkPrint string
    (26) skip -> . TkSkip
    (1) program -> . new_block declarations TkSemicolon instructions TkCBlock
    (2) program -> . new_block instructions TkCBlock
    (3) new_block -> . TkOBlock

    TkInt           shift and go to state 8
    TkBool          shift and go to state 9
    TkFunction      shift and go to state 10
    TkId            shift and go to state 16
    TkWhile         shift and go to state 17
    TkIf            shift and go to state 18
    TkPrint         shift and go to state 19
    TkSkip          shift and go to state 20
    TkOBlock        shift and go to state 3

    new_block                      shift and go to state 2
    declarations                   shift and go to state 4
    instructions                   shift and go to state 5
    declaration                    shift and go to state 6
    instruction                    shift and go to state 7
    while                          shift and go to state 11
    if                             shift and go to state 12
    print                          shift and go to state 13
    skip                           shift and go to state 14
    program                        shift and go to state 15

state 3

    (3) new_block -> TkOBlock .

    TkInt           reduce using rule 3 (new_block -> TkOBlock .)
    TkBool          reduce using rule 3 (new_block -> TkOBlock .)
    TkFunction      reduce using rule 3 (new_block -> TkOBlock .)
    TkId            reduce using rule 3 (new_block -> TkOBlock .)
    TkWhile         reduce using rule 3 (new_block -> TkOBlock .)
    TkIf            reduce using rule 3 (new_block -> TkOBlock .)
    TkPrint         reduce using rule 3 (new_block -> TkOBlock .)
    TkSkip          reduce using rule 3 (new_block -> TkOBlock .)
    TkOBlock        reduce using rule 3 (new_block -> TkOBlock .)


state 4

    (1) program -> new_block declarations . TkSemicolon instructions TkCBlock
    (4) declarations -> declarations . TkSemicolon declaration

    TkSemicolon     shift and go to state 21


state 5

    (2) program -> new_block instructions . TkCBlock
    (14) instructions -> instructions . TkSemicolon instruction

    TkCBlock        shift and go to state 22
    TkSemicolon     shift and go to state 23


state 6

    (5) declarations -> declaration .

    TkSemicolon     reduce using rule 5 (declarations -> declaration .)


state 7

    (15) instructions -> instruction .

    TkCBlock        reduce using rule 15 (instructions -> instruction .)
    TkSemicolon     reduce using rule 15 (instructions -> instruction .)
    TkEnd           reduce using rule 15 (instructions -> instruction .)
    TkFi            reduce using rule 15 (instructions -> instruction .)
    TkGuard         reduce using rule 15 (instructions -> instruction .)


state 8

    (6) declaration -> TkInt . idlist
    (9) idlist -> . idlist TkComma id
    (10) idlist -> . id
    (11) id -> . TkId

    TkId            shift and go to state 26

    idlist                         shift and go to state 24
    id                             shift and go to state 25

state 9

    (7) declaration -> TkBool . idlist
    (9) idlist -> . idlist TkComma id
    (10) idlist -> . id
    (11) id -> . TkId

    TkId            shift and go to state 26

    idlist                         shift and go to state 27
    id                             shift and go to state 25

state 10

    (8) declaration -> TkFunction . TkOBracket TkSoForth TkNum TkCBracket idlist

    TkOBracket      shift and go to state 28


state 11

    (16) instruction -> while .

    TkCBlock        reduce using rule 16 (instruction -> while .)
    TkSemicolon     reduce using rule 16 (instruction -> while .)
    TkEnd           reduce using rule 16 (instruction -> while .)
    TkFi            reduce using rule 16 (instruction -> while .)
    TkGuard         reduce using rule 16 (instruction -> while .)


state 12

    (17) instruction -> if .

    TkCBlock        reduce using rule 17 (instruction -> if .)
    TkSemicolon     reduce using rule 17 (instruction -> if .)
    TkEnd           reduce using rule 17 (instruction -> if .)
    TkFi            reduce using rule 17 (instruction -> if .)
    TkGuard         reduce using rule 17 (instruction -> if .)


state 13

    (18) instruction -> print .

    TkCBlock        reduce using rule 18 (instruction -> print .)
    TkSemicolon     reduce using rule 18 (instruction -> print .)
    TkEnd           reduce using rule 18 (instruction -> print .)
    TkFi            reduce using rule 18 (instruction -> print .)
    TkGuard         reduce using rule 18 (instruction -> print .)


state 14

    (19) instruction -> skip .

    TkCBlock        reduce using rule 19 (instruction -> skip .)
    TkSemicolon     reduce using rule 19 (instruction -> skip .)
    TkEnd           reduce using rule 19 (instruction -> skip .)
    TkFi            reduce using rule 19 (instruction -> skip .)
    TkGuard         reduce using rule 19 (instruction -> skip .)


state 15

    (20) instruction -> program .

    TkCBlock        reduce using rule 20 (instruction -> program .)
    TkSemicolon     reduce using rule 20 (instruction -> program .)
    TkEnd           reduce using rule 20 (instruction -> program .)
    TkFi            reduce using rule 20 (instruction -> program .)
    TkGuard         reduce using rule 20 (instruction -> program .)


state 16

    (21) instruction -> TkId . TkAsig expression
    (22) instruction -> TkId . TkAsig expressionlist
    (23) instruction -> TkId . TkAsig functionMod

    TkAsig          shift and go to state 29


state 17

    (27) while -> TkWhile . expression TkArrow instructions TkEnd
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    expression                     shift and go to state 30
    functionMod                    shift and go to state 35

state 18

    (28) if -> TkIf . guardlist TkFi
    (29) guardlist -> . guardlist TkGuard guard
    (30) guardlist -> . guard
    (31) guard -> . expression TkArrow instructions
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    guardlist                      shift and go to state 39
    guard                          shift and go to state 40
    expression                     shift and go to state 41
    functionMod                    shift and go to state 35

state 19

    (24) print -> TkPrint . expression
    (25) print -> TkPrint . string
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (54) string -> . TkString
    (55) string -> . string TkPlus string
    (56) string -> . expression TkPlus string
    (57) string -> . string TkPlus expression
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkString        shift and go to state 44

    expression                     shift and go to state 42
    string                         shift and go to state 43
    functionMod                    shift and go to state 35

state 20

    (26) skip -> TkSkip .

    TkCBlock        reduce using rule 26 (skip -> TkSkip .)
    TkSemicolon     reduce using rule 26 (skip -> TkSkip .)
    TkEnd           reduce using rule 26 (skip -> TkSkip .)
    TkFi            reduce using rule 26 (skip -> TkSkip .)
    TkGuard         reduce using rule 26 (skip -> TkSkip .)


state 21

    (1) program -> new_block declarations TkSemicolon . instructions TkCBlock
    (4) declarations -> declarations TkSemicolon . declaration
    (14) instructions -> . instructions TkSemicolon instruction
    (15) instructions -> . instruction
    (6) declaration -> . TkInt idlist
    (7) declaration -> . TkBool idlist
    (8) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
    (16) instruction -> . while
    (17) instruction -> . if
    (18) instruction -> . print
    (19) instruction -> . skip
    (20) instruction -> . program
    (21) instruction -> . TkId TkAsig expression
    (22) instruction -> . TkId TkAsig expressionlist
    (23) instruction -> . TkId TkAsig functionMod
    (27) while -> . TkWhile expression TkArrow instructions TkEnd
    (28) if -> . TkIf guardlist TkFi
    (24) print -> . TkPrint expression
    (25) print -> . TkPrint string
    (26) skip -> . TkSkip
    (1) program -> . new_block declarations TkSemicolon instructions TkCBlock
    (2) program -> . new_block instructions TkCBlock
    (3) new_block -> . TkOBlock

    TkInt           shift and go to state 8
    TkBool          shift and go to state 9
    TkFunction      shift and go to state 10
    TkId            shift and go to state 16
    TkWhile         shift and go to state 17
    TkIf            shift and go to state 18
    TkPrint         shift and go to state 19
    TkSkip          shift and go to state 20
    TkOBlock        shift and go to state 3

    new_block                      shift and go to state 2
    instructions                   shift and go to state 45
    declaration                    shift and go to state 46
    instruction                    shift and go to state 7
    while                          shift and go to state 11
    if                             shift and go to state 12
    print                          shift and go to state 13
    skip                           shift and go to state 14
    program                        shift and go to state 15

state 22

    (2) program -> new_block instructions TkCBlock .

    $end            reduce using rule 2 (program -> new_block instructions TkCBlock .)
    TkCBlock        reduce using rule 2 (program -> new_block instructions TkCBlock .)
    TkSemicolon     reduce using rule 2 (program -> new_block instructions TkCBlock .)
    TkEnd           reduce using rule 2 (program -> new_block instructions TkCBlock .)
    TkFi            reduce using rule 2 (program -> new_block instructions TkCBlock .)
    TkGuard         reduce using rule 2 (program -> new_block instructions TkCBlock .)


state 23

    (14) instructions -> instructions TkSemicolon . instruction
    (16) instruction -> . while
    (17) instruction -> . if
    (18) instruction -> . print
    (19) instruction -> . skip
    (20) instruction -> . program
    (21) instruction -> . TkId TkAsig expression
    (22) instruction -> . TkId TkAsig expressionlist
    (23) instruction -> . TkId TkAsig functionMod
    (27) while -> . TkWhile expression TkArrow instructions TkEnd
    (28) if -> . TkIf guardlist TkFi
    (24) print -> . TkPrint expression
    (25) print -> . TkPrint string
    (26) skip -> . TkSkip
    (1) program -> . new_block declarations TkSemicolon instructions TkCBlock
    (2) program -> . new_block instructions TkCBlock
    (3) new_block -> . TkOBlock

    TkId            shift and go to state 16
    TkWhile         shift and go to state 17
    TkIf            shift and go to state 18
    TkPrint         shift and go to state 19
    TkSkip          shift and go to state 20
    TkOBlock        shift and go to state 3

    instruction                    shift and go to state 47
    while                          shift and go to state 11
    if                             shift and go to state 12
    print                          shift and go to state 13
    skip                           shift and go to state 14
    program                        shift and go to state 15
    new_block                      shift and go to state 2

state 24

    (6) declaration -> TkInt idlist .
    (9) idlist -> idlist . TkComma id

    TkSemicolon     reduce using rule 6 (declaration -> TkInt idlist .)
    TkComma         shift and go to state 48


state 25

    (10) idlist -> id .

    TkComma         reduce using rule 10 (idlist -> id .)
    TkSemicolon     reduce using rule 10 (idlist -> id .)


state 26

    (11) id -> TkId .

    TkComma         reduce using rule 11 (id -> TkId .)
    TkSemicolon     reduce using rule 11 (id -> TkId .)


state 27

    (7) declaration -> TkBool idlist .
    (9) idlist -> idlist . TkComma id

    TkSemicolon     reduce using rule 7 (declaration -> TkBool idlist .)
    TkComma         shift and go to state 48


state 28

    (8) declaration -> TkFunction TkOBracket . TkSoForth TkNum TkCBracket idlist

    TkSoForth       shift and go to state 49


state 29

    (21) instruction -> TkId TkAsig . expression
    (22) instruction -> TkId TkAsig . expressionlist
    (23) instruction -> TkId TkAsig . functionMod
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (12) expressionlist -> . expressionlist TkComma expression
    (13) expressionlist -> . expression TkComma expression
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    expression                     shift and go to state 50
    expressionlist                 shift and go to state 51
    functionMod                    shift and go to state 52

state 30

    (27) while -> TkWhile expression . TkArrow instructions TkEnd
    (32) expression -> expression . TkPlus expression
    (33) expression -> expression . TkMinus expression
    (34) expression -> expression . TkMult expression
    (35) expression -> expression . TkLeq expression
    (36) expression -> expression . TkGeq expression
    (37) expression -> expression . TkLess expression
    (38) expression -> expression . TkGreater expression
    (39) expression -> expression . TkEqual expression
    (40) expression -> expression . TkNEqual expression
    (41) expression -> expression . TkOr expression
    (42) expression -> expression . TkAnd expression
    (45) expression -> expression . TkApp TkId
    (46) expression -> expression . TkApp TkNum

    TkArrow         shift and go to state 53
    TkPlus          shift and go to state 54
    TkMinus         shift and go to state 55
    TkMult          shift and go to state 56
    TkLeq           shift and go to state 57
    TkGeq           shift and go to state 58
    TkLess          shift and go to state 59
    TkGreater       shift and go to state 60
    TkEqual         shift and go to state 61
    TkNEqual        shift and go to state 62
    TkOr            shift and go to state 63
    TkAnd           shift and go to state 64
    TkApp           shift and go to state 65


state 31

    (44) expression -> TkMinus . expression
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    expression                     shift and go to state 66
    functionMod                    shift and go to state 35

state 32

    (43) expression -> TkNot . expression
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    expression                     shift and go to state 67
    functionMod                    shift and go to state 35

state 33

    (47) expression -> TkId . TkApp expression
    (52) expression -> TkId .
    (50) functionMod -> TkId . TkOpenPar twopoints TkClosePar

  ! shift/reduce conflict for TkApp resolved as shift
    TkApp           shift and go to state 68
    TkArrow         reduce using rule 52 (expression -> TkId .)
    TkPlus          reduce using rule 52 (expression -> TkId .)
    TkMinus         reduce using rule 52 (expression -> TkId .)
    TkMult          reduce using rule 52 (expression -> TkId .)
    TkLeq           reduce using rule 52 (expression -> TkId .)
    TkGeq           reduce using rule 52 (expression -> TkId .)
    TkLess          reduce using rule 52 (expression -> TkId .)
    TkGreater       reduce using rule 52 (expression -> TkId .)
    TkEqual         reduce using rule 52 (expression -> TkId .)
    TkNEqual        reduce using rule 52 (expression -> TkId .)
    TkOr            reduce using rule 52 (expression -> TkId .)
    TkAnd           reduce using rule 52 (expression -> TkId .)
    TkCBlock        reduce using rule 52 (expression -> TkId .)
    TkSemicolon     reduce using rule 52 (expression -> TkId .)
    TkEnd           reduce using rule 52 (expression -> TkId .)
    TkFi            reduce using rule 52 (expression -> TkId .)
    TkGuard         reduce using rule 52 (expression -> TkId .)
    TkComma         reduce using rule 52 (expression -> TkId .)
    TkClosePar      reduce using rule 52 (expression -> TkId .)
    TkTwoPoints     reduce using rule 52 (expression -> TkId .)
    TkOpenPar       shift and go to state 69

  ! TkApp           [ reduce using rule 52 (expression -> TkId .) ]


state 34

    (58) expression -> TkNum .

    TkArrow         reduce using rule 58 (expression -> TkNum .)
    TkPlus          reduce using rule 58 (expression -> TkNum .)
    TkMinus         reduce using rule 58 (expression -> TkNum .)
    TkMult          reduce using rule 58 (expression -> TkNum .)
    TkLeq           reduce using rule 58 (expression -> TkNum .)
    TkGeq           reduce using rule 58 (expression -> TkNum .)
    TkLess          reduce using rule 58 (expression -> TkNum .)
    TkGreater       reduce using rule 58 (expression -> TkNum .)
    TkEqual         reduce using rule 58 (expression -> TkNum .)
    TkNEqual        reduce using rule 58 (expression -> TkNum .)
    TkOr            reduce using rule 58 (expression -> TkNum .)
    TkAnd           reduce using rule 58 (expression -> TkNum .)
    TkApp           reduce using rule 58 (expression -> TkNum .)
    TkCBlock        reduce using rule 58 (expression -> TkNum .)
    TkSemicolon     reduce using rule 58 (expression -> TkNum .)
    TkEnd           reduce using rule 58 (expression -> TkNum .)
    TkFi            reduce using rule 58 (expression -> TkNum .)
    TkGuard         reduce using rule 58 (expression -> TkNum .)
    TkComma         reduce using rule 58 (expression -> TkNum .)
    TkClosePar      reduce using rule 58 (expression -> TkNum .)
    TkTwoPoints     reduce using rule 58 (expression -> TkNum .)


state 35

    (48) expression -> functionMod . TkApp expression
    (49) functionMod -> functionMod . TkOpenPar twopoints TkClosePar

    TkApp           shift and go to state 70
    TkOpenPar       shift and go to state 71


state 36

    (53) expression -> TkOpenPar . expression TkClosePar
    (32) expression -> . expression TkPlus expression
    (33) expression -> . expression TkMinus expression
    (34) expression -> . expression TkMult expression
    (35) expression -> . expression TkLeq expression
    (36) expression -> . expression TkGeq expression
    (37) expression -> . expression TkLess expression
    (38) expression -> . expression TkGreater expression
    (39) expression -> . expression TkEqual expression
    (40) expression -> . expression TkNEqual expression
    (41) expression -> . expression TkOr expression
    (42) expression -> . expression TkAnd expression
    (43) expression -> . TkNot expression
    (44) expression -> . TkMinus expression
    (45) expression -> . expression TkApp TkId
    (46) expression -> . expression TkApp TkNum
    (47) expression -> . TkId TkApp expression
    (48) expression -> . functionMod TkApp expression
    (52) expression -> . TkId
    (53) expression -> . TkOpenPar expression TkClosePar
    (58) expression -> . TkNum
    (59) expression -> . TkTrue
    (60) expression -> . TkFalse
    (49) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (50) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 32
    TkMinus         shift and go to state 31
    TkId            shift and go to state 33
    TkOpenPar       shift and go to state 36
    TkNum           shift and go to state 34
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38

    expression                     shift and go to state 72
    functionMod                    shift and go to state 35

state 37

    (59) expression -> TkTrue .

    TkArrow         reduce using rule 59 (expression -> TkTrue .)
    TkPlus          reduce using rule 59 (expression -> TkTrue .)
    TkMinus         reduce using rule 59 (expression -> TkTrue .)
    TkMult          reduce using rule 59 (expression -> TkTrue .)
    TkLeq           reduce using rule 59 (expression -> TkTrue .)
    TkGeq           reduce using rule 59 (expression -> TkTrue .)
    TkLess          reduce using rule 59 (expression -> TkTrue .)
    TkGreater       reduce using rule 59 (expression -> TkTrue .)
    TkEqual         reduce using rule 59 (expression -> TkTrue .)
    TkNEqual        reduce using rule 59 (expression -> TkTrue .)
    TkOr            reduce using rule 59 (expression -> TkTrue .)
    TkAnd           reduce using rule 59 (expression -> TkTrue .)
    TkApp           reduce using rule 59 (expression -> TkTrue .)
    TkCBlock        reduce using rule 59 (expression -> TkTrue .)
    TkSemicolon     reduce using rule 59 (expression -> TkTrue .)
    TkEnd           reduce using rule 59 (expression -> TkTrue .)
    TkFi            reduce using rule 59 (expression -> TkTrue .)
    TkGuard         reduce using rule 59 (expression -> TkTrue .)
    TkComma         reduce using rule 59 (expression -> TkTrue .)
    TkClosePar      reduce using rule 59 (expression -> TkTrue .)
    TkTwoPoints     reduce using rule 59 (expression -> TkTrue .)


state 38

    (60) expression -> TkFalse .

    TkArrow         reduce using rule 60 (expression -> TkFalse .)
    TkPlus          reduce using rule 60 (expression -> TkFalse .)
    TkMinus         reduce using rule 60 (expression -> TkFalse .)
    TkMult          reduce using rule 60 (expression -> TkFalse .)
    TkLeq           reduce using rule 60 (expression -> TkFalse .)
    TkGeq           reduce using rule 60 (expression -> TkFalse .)
    TkLess          reduce using rule 60 (expression -> TkFalse .)
    TkGreater       reduce using rule 60 (expression -> TkFalse .)
    TkEqual         reduce using rule 60 (expression -> TkFalse .)
    TkNEqual        reduce using rule 60 (expression -> TkFalse .)
    TkOr            reduce using rule 60 (expression -> TkFalse .)
    TkAnd           reduce using rule 60 (expression -> TkFalse .)
    TkApp           reduce using rule 60 (expression -> TkFalse .)
    TkCBlock        reduce using rule 60 (expression -> TkFalse .)
    TkSemicolon     reduce using rule 60 (expression -> TkFalse .)
    TkEnd           reduce using rule 60 (expression -> TkFalse .)
    TkFi            reduce using rule 60 (expression -> TkFalse .)
    TkGuard         reduce using rule 60 (expression -> TkFalse .)
    TkComma         reduce using rule 60 (expression -> TkFalse .)
    TkClosePar      reduce using rule 60 (expression -> TkFalse .)
    TkTwoPoints     reduce using rule 60 (expression -> TkFalse .)


state 39

    (28) if -> TkIf guardlist . TkFi
    (29) guardlist -> guardlist . TkGuard guard

    TkFi            shift and go to state 73
    TkGuard         shift and go to state 74


state 40

    (30) guardlist -> guard .

    TkFi            reduce using rule 30 (guardlist -> guard .)
    TkGuard         reduce using rule 30 (guardlist -> guard .)


state 41
